fix: downgrade code to fit jdk8 API